# compilerbau_praktikum

./: CMakeLists.txt  README.md
src/: cli.cpp  compiler.cpp  compiler.hpp  lexer.cpp  lexer.hpp
